# fuzvisor

./: CMakeLists.txt  README.md
collector/: CMakeLists.txt  Cargo.toml  build.rs
collector/collector_service/: Cargo.toml
collector/collector_service/src/: fuzzer.rs  lib.rs
collector/common/: Cargo.toml  build.rs
collector/common/src/: lib.rs
collector/examples/: Cargo.toml  coverage_collector.rs  low_freq_high_prio.rs
collector/examples/python/: build.sh  coverage_observer.py  requirements.txt
collector/fuzzer_client/: Cargo.toml
collector/fuzzer_client/src/: client.rs  lib.rs
collector/observer_proxy/: Cargo.toml
collector/observer_proxy/src/: main.rs
collector/src/common/: lib.rs
collector/src/fuzzer_client/: client.rs  lib.rs
collector/src/libcollector/: client.rs  lib.rs
collector/src/server/: fuzzer.rs  main.rs
llvm_pass/: CMakeLists.txt  CollectorPass.cpp
proto/: CMakeLists.txt  collector_service.proto  control_flow_graph.proto  observer_service.proto  structure_graph.proto
