[package]
name = "examples"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"

[dependencies]
async-trait = "0.1"
collector_service = { path = "../collector_service" }
common = { path = "../common" }
lazy_static = "1.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros"] }
tonic = "0.4"

[[example]]
name = "coverage_collector"
path = "coverage_collector.rs"
