[package]
name = "observer_proxy"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"

[dependencies]
async-trait = "0.1"
clap = "2.0"
collector_service = { path = "../collector_service" }
common = { path = "../common" }
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"
